--- a/cotar.html
+++ b/cotar.html
@@ -15,7 +15,7 @@
 	<!-- CSS Main -->
 	<link rel="stylesheet" type="text/css" href="assets/css/main.css">
 	<!-- Title -->
-	<title>DuValle - Contato</title>
+	<title>DuValle - Cotação</title>
 </head>
 <body>
 
@@ -36,13 +36,13 @@
 		<li class="nav-item">
 	        <a class="nav-link white" href="index.html">Home</a>
 	      </li>
-	      <li class="nav-item">
+	      <li class="nav-item active">
 	        <a class="nav-link white" href="produtos.html">Produtos</a>
 	      </li>
 	      <li class="nav-item">
 	        <a class="nav-link white" href="parceiro.html">Seja nosso parceiro</a>
 	      </li>
-	      <li class="nav-item active">
+	      <li class="nav-item">
 	        <a class="nav-link white" href="contato.html">Contato</a>
 	      </li>
 	      <li class="nav-item text-center navContato">
@@ -66,14 +66,21 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-12 col-md-12 col-sm-12 col-lg-6 col-xl-6 parceiroDesktop">
-				<h2 class="titleContent">Contato</h2>
-				<form action="contato.php" method="POST">
+				<h2 class="titleContent">Cotação</h2>
+				<form action="cotar.php" method="POST">
+					<label class="txtLabelForm">Tipo</label>
+				  <div class="form-row">
+				    <div class="form-group col-12">
+				      <button type="button" value="fisica" class="btnFisica active" id="inputTipo">Pessoa Física</button>
+				      <button type="button" value="juridica" class="btnJuridica" id="inputTipo">Pessoa Jurídica</button>
+				    </div>
+				  </div>
 				  <div class="form-row">
 				    <div class="form-group col-12">
 					  <label class="txtLabelForm" for="inputName">Nome</label>
-					  <input type="text" class="form-control inputDefault" id="inputName" name="nome" placeholder="Maria Inc">
+					  <input type="text" class="form-control inputDefault" id="inputName" name="nome" placeholder="Maria Inc" required="inputName">
 					  <div class="invalid-feedback">
-				        Campo obrigatório
+				        Nome obrigatório
 				      </div>
 					</div>
 				  	<div class="form-group col-12">
@@ -93,20 +100,129 @@
 				      </div>
 				    </div>
 				    <div class="form-group col-12">
-				      <label class="txtLabelForm" for="inputCidade">Cidade</label>
-				      <input type="text" class="form-control inputDefault" id="inputCidade" name="cidade" placeholder="São Paulo">
+				      <label class="txtLabelForm" for="inputCep">CEP</label>
+				      <input type="number" class="form-control inputDefault" id="inputCep" name="cep" placeholder="09865-670">
 				      <div class="invalid-feedback">
 				        Campo obrigatório
 				      </div>
 				    </div>
 				  </div>
-				  <div class="form-group">
-				    <label class="txtLabelForm" for="exampleFormControlTextarea1">Mensagem</label>
-				    <textarea class="form-control inputDefault" id="exampleFormControlTextarea1" name="mensagem" rows="3"></textarea>
+				  <div class="form-row">
+				    <div class="form-group col-12">
+				      <label class="txtLabelForm" for="inputlCidade">Cidade</label>
+				      <input type="text" class="form-control inputDefault" id="inputCidade" name="cidade" placeholder="São Paulo">
+				      <div class="invalid-feedback">
+				        Campo obrigatório
+				      </div>
+				    </div>
+				    <div class="form-group col-12">
+				      <label class="txtLabelForm" for="inputEstado">UF</label>
+				      <select id="inputEstado" name="estado" class="form-control inputDefault">
+				        <option selected>Estado</option>
+				        <option value="AC">AC</option>
+						<option value="AL">AL</option>
+						<option value="AP">AP</option>
+						<option value="AM">AM</option>
+						<option value="BA">BA</option>
+						<option value="CE">CE</option>
+						<option value="DF">CF</option>
+						<option value="ES">ES</option>
+						<option value="GO">GO</option>
+						<option value="MA">MA</option>
+						<option value="MT">MT</option>
+						<option value="MS">MS</option>
+						<option value="MG">MG</option>
+						<option value="PA">PA</option>
+						<option value="PB">PB</option>
+						<option value="PR">PR</option>
+						<option value="PE">PE</option>
+						<option value="PI">PI</option>
+						<option value="RJ">RJ</option>
+						<option value="RN">RN</option>
+						<option value="RS">RS</option>
+						<option value="RO">RO</option>
+						<option value="RR">RR</option>
+						<option value="SC">SC</option>
+						<option value="SP">SP</option>
+						<option value="SE">SE</option>
+						<option value="TO">TO</option>
+				      </select>
+				      <div class="invalid-feedback">
+				        Campo obrigatório
+				      </div>
+				    </div>
 				  </div>
-				  <div class="form-group text-center">
-				  	<button type="submit" class="btnSendForm">Enviar</button>
+				  <div class="form-row">
+				    <div class="form-group col-12">
+				      <label class="txtLabelForm" for="inputlEndereco">Endereço</label>
+				      <input type="text" class="form-control inputDefault" id="inputEndero" name="endereco" placeholder="Rua Joaquim Chuas">
+				      <div class="invalid-feedback">
+				        Campo obrigatório
+				      </div>
+				    </div>
+				    <div class="form-group col-12">
+				      <label class="txtLabelForm" for="inputNumero">Numero</label>
+				      <input type="text" class="form-control inputDefault" id="inputNumero" name="numero" placeholder="5040">
+				      <div class="invalid-feedback">
+				        Campo obrigatório
+				      </div>
+				    </div>
 				  </div>
+				  <h3 style="color: #000;">Semente 1</h3>
+				  <div class="form-row">
+				    <div class="form-group col-12">
+				      <label class="txtLabelForm" for="inputSemente1">Nome da semente</label>
+				      <input type="text" class="form-control inputDefault" id="inputSemente1" name="semente1" placeholder="Nome da semente">
+				      <div class="invalid-feedback">
+				        Campo obrigatório
+				      </div>
+				    </div>
+				    <div class="form-group col-12">
+				      <label class="txtLabelForm" for="areaPlantio1">Area de Plantio</label>
+				      <input type="number" class="form-control inputDefault" id="areaPlantio1" name="semente2" placeholder="Area de Plantio">
+				      <div class="invalid-feedback">
+				        Campo obrigatório
+				      </div>
+				    </div>
+				    <div class="form-group col-12">
+				  		<label class="txtLabelForm" for="quantSemente1">Quantidade</label>
+				  		<input type="number" class="form-control inputDefault" id="quantSemente1" placeholder="Quantidade">
+				  	</div>
+				  </div>
+				  <h3 style="color: #000;">Semente 2</h3>
+				  <div class="form-row">
+				    <div class="form-group col-12">
+				      <label class="txtLabelForm" for="inputSemente2">Nome da semente</label>
+				      <input type="text" class="form-control inputDefault" id="inputSemente2" placeholder="Nome da semente">
+				      <div class="invalid-feedback">
+				        Campo obrigatório
+				      </div>
+				    </div>
+				    <div class="form-group col-12">
+				      <label class="txtLabelForm" for="areaPlantio2">Area de Plantio</label>
+				      <input type="number" class="form-control inputDefault" id="areaPlantio2" placeholder="Area de Plantio">
+				      <div class="invalid-feedback">
+				        Campo obrigatório
+				      </div>
+				    </div>
+				    <div class="form-group col-12">
+				  		<label class="txtLabelForm" for="quantSemente2">Quantidade</label>
+				  		<input type="number" class="form-control inputDefault" id="quantSemente2" placeholder="Quantidade">
+				  	</div>
+				  </div>
+				  <div class="form-row">
+				  	<div class="form-group col-12 text-center">
+				  		<input id="ruralSim" name="rural" type="radio" value="sim" placeholder="Sim">
+				  		<label class="txtLabelForm" for="ruralSim">Sim</label>
+				  		<input id="ruralNao" name="rural" type="radio" value="nao" placeholder="Não">
+				  		<label class="txtLabelForm" for="ruralNao">Não</label>
+				  	</div>
+				  </div>
+				  <div class="form-row">
+					<div class="form-group col-12 text-center">
+						<button type="submit" class="btnSendForm">Enviar Cotação</button>
+					</div>
+				  	</div>
 				</form>
 			</div>
 		</div>
@@ -224,7 +340,7 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js" integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 <!-- Main Script -->
-<script type="text/javascript" src="assets/js/main.js"></script> 
-
+<script type="text/javascript" src="assets/js/main.js"></script>
+  
 </body>
 </html>
