--- a/produtos/pojuca.html
+++ b/produtos/pojuca.html
@@ -33,10 +33,10 @@
 
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
   	<ul class="navbar-nav ml-auto">
-		<li class="nav-item active">
+		<li class="nav-item">
 	        <a class="nav-link white" href="../index.html">Home</a>
 	      </li>
-	      <li class="nav-item">
+	      <li class="nav-item active">
 	        <a class="nav-link white" href="../produtos.html">Produtos</a>
 	      </li>
 	      <li class="nav-item">
@@ -234,69 +234,79 @@
 			<div class="col-12">
 				<ul class="footerList">
 					<li>
-						<img src="../assets/imgs/logos/logo-w-text.svg">
+						<a href="../index.html">
+							<img src="../assets/imgs/logos/logo-w-text.svg">
+						</a>
 					</li>
 					<li>
-						<img src="../assets/imgs/icons/green/whatsapp-icon-green.svg">
+						<a href="https://wa.me/+5518996613390">
+							<img src="../assets/imgs/icons/green/whatsapp-icon-green.svg">
+						</a>
 					</li>
 					<li>
-						<img src="../assets/imgs/icons/green/phone-icon.svg">	
+						<a href="tel:+551832634272">
+							<img src="../assets/imgs/icons/green/phone-icon.svg">
+						</a>	
 					</li>
 					<li>
-						<img src="../assets/imgs/icons/green/email-icon.svg">
+						<a href="mailto:duvalle@duvalle.agr.br">
+							<img src="../assets/imgs/icons/green/email-icon.svg">
+						</a>
 					</li>
 				</ul>
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-12">
+			<div class="col-12 col-md-12 col-xl-12">
 				<p class="textFooter">
 					Rua Lolita Sanches Pretel, 1001 | 19360-000<br/>
 					Santo Anastácio - São Paulo, Brasil
 				</p>
-				<p class="textFooterLine">Copyright &copy; 2019 DuValle</p>
-				<p style="color:rgba(0, 0, 0, .56); font-size: 14px; margin: 10px 0;">
+				<p class="footerCopy">Copyright &copy; 2019 DuValle</p>
+				<p class="textFooter">
 					Desenvolvido por <a href="https://www.behance.net/VictorMaloyama" class="developers" title="Victor Maloyama">Victor Maloyama</a><br/>
 					e <a href="https://chapabr.github.io/portfolio/" class="developers" title="Guilherme Augusto">Guilherme Augusto</a>
 				</p>
 			</div>
 		</div>
 	</div>
-	<div class="container footerDesktop" style="margin: 76px auto 67px auto;">
+	<div class="container footerDesktop footerCaixaLogos">
 		<div class="row">
 			<div class="col-6 col-lg-6 col-xl-6">
-				<img src="../assets/imgs/logos/logo-w-text.svg" style="width: 184px;">
-				<p style="color: rgba(0, 0, 0, .87);">
+				<a href="../index.html">
+					<img src="../assets/imgs/logos/logo-w-text.svg" style="width: 184px;">
+				</a>
+				<p class="textFooter">
 					Rua Lolita Sanches Pretel, 1001 | 19360-000<br/>
 					Santo Anastácio - São Paulo, Brasil
 				</p>
-				<ul style="list-style: none;display: flex; padding: 0; margin: 0;">
-					<li style="padding: 15px 24px 35px 0px;">
-						<a href="mailto:duvalle@duvalle.agr.br"><img src="../assets/imgs/icons/green/email-icon.svg" style="width: 21px;"></a>
+				<ul class="listFooter">
+					<li class="footerItemPadding">
+						<a href="mailto:duvalle@duvalle.agr.br"><img src="../assets/imgs/icons/green/email-icon.svg" class="footerImage"></a>
 					</li>
-					<li style="padding: 15px 24px 35px 0px;">
-						<a href="tel:+551832634272"><img src="../assets/imgs/icons/green/phone-icon.svg" style="width: 21px;"></a>
+					<li class="footerItemPadding">
+						<a href="tel:+551832634272"><img src="../assets/imgs/icons/green/phone-icon.svg" class="footerImage"></a>
 					</li>
-					<li style="padding: 15px 24px 35px 0px;">
-						<a href="https://wa.me/+5518996613390"><img src="../assets/imgs/icons/green/whatsapp-icon-green.svg" style="width: 21px;"></a>
+					<li class="footerItemPadding">
+						<a href="https://wa.me/+5518996613390"><img src="../assets/imgs/icons/green/whatsapp-icon-green.svg" class="footerImage"></a>
 					</li>
 				</ul>
 			</div>
 			<div class="col-6 col-lg-6 col-xl-6">
-				<ul style="list-style: none;">
-					<li><a href="../index.html" style="color: rgba(0, 0, 0, .87);">Home</a></li>
-					<li><a href="../produtos.html" style="color: rgba(0, 0, 0, .57);">Produtos</a></li>
-					<li><a href="../parceiro.html" style="color: rgba(0, 0, 0, .57);">Seja nosso parceiro</a></li>
-					<li><a href="../contato.html" style="color: rgba(0, 0, 0, .57);">Contato</a></li>
+				<ul class="navFooter">
+					<li><a href="../index.html" class="navFooter footerActive">Home</a></li>
+					<li><a href="../produtos.html" class="navFooter">Produtos</a></li>
+					<li><a href="../parceiro.html" class="navFooter">Seja nosso parceiro</a></li>
+					<li><a href="../contato.html" class="navFooter">Contato</a></li>
 				</ul>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-6 col-lg-6 col-xl-6">
-				<p style="color: rgba(0, 0, 0, .87);">Copyright &copy; 2019 DuValle</p>
+				<p class="footerActive">Copyright &copy; 2019 DuValle</p>
 			</div>
 			<div class="col-6 col-lg-6 col-xl-6">
-				<p style="color: rgba(0, 0, 0, .87);">
+				<p class="footerActive">
 					Desenvolvido por <a href="https://www.behance.net/VictorMaloyama" class="developers" title="Victor Maloyama">Victor Maloyama</a> e <a href="https://chapabr.github.io/portfolio/" class="developers" title="Guilherme Augusto">Guilherme Augusto</a>
 				</p>
 			</div>
