--- a/parceiro.html
+++ b/parceiro.html
@@ -10,6 +10,7 @@
 	<meta property="og:type" content="website">
 	<meta property="og:title" content="DuValle">
 	<meta property="og:site_name" content="DuValle">
+	<link rel="icon" href="assets/imgs/logos/favicon.png">
 	<!-- Bootstrap -->
 	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<!-- CSS Main -->
@@ -71,8 +72,14 @@
 					<label class="txtLabelForm">Tipo</label>
 				  <div class="form-row">
 				    <div class="form-group col-12">
-				      <button type="button" value="fisica" class="btnFisica active" id="inputTipo">Pessoa Física</button>
-				      <button type="button" value="juridica" class="btnJuridica" id="inputTipo">Pessoa Jurídica</button>
+				    	<label class="btnFisicaLabel tipoClick buttonVerde" id="sla1">
+				    		Pessoa Física
+				    		<input type="radio" name="tipo" value="Pessoa Física" class="btnFisica active" id="pessoaFisica" required="tipo" checked>
+				    	</label>
+				      	<label class="btnJuridicaLabel tipoClick" id="sla2">
+				      		Pessoa Jurídica
+				      		<input type="radio" name="tipo" value="Pessoa Jurídica" class="btnJuridica" id="pessoaJuridica" required="tipo">
+						</label>
 				    </div>
 				  </div>
 				  <div class="form-row">
