--- a/produtos.html
+++ b/produtos.html
@@ -10,6 +10,7 @@
 	<meta property="og:type" content="website">
 	<meta property="og:title" content="DuValle">
 	<meta property="og:site_name" content="DuValle">
+	<link rel="icon" href="assets/imgs/logos/favicon.png">
 	<!-- OWL Carousel -->
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
