--- a/produtos/crotalaria-juncea.html
+++ b/produtos/crotalaria-juncea.html
@@ -10,6 +10,7 @@
 	<meta property="og:type" content="website">
 	<meta property="og:title" content="DuValle">
 	<meta property="og:site_name" content="DuValle">
+	<link rel="icon" href="../assets/imgs/logos/favicon.png">
 	<!-- Bootstrap -->
 	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<!-- CSS Main -->
@@ -218,7 +219,7 @@
 		</div>
 		<div class="row buttonArea product">
 			<div class="col-12 col-md-12 col-sm-12 text-center">
-				<button type="button" class="btnGreen">Cotar preço</button><br/>
+				<a class="btnGreen" href="../cotar.html">Cotar preço</a><br/>
 				<a href="../produtos.html" class="btnReturn">
 					<img src="../assets/imgs/icons/green/arrow-icon.svg" class="arrowIcon">
 					Voltar para produtos
