--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 					<div class="form-row">
 					  	<div class="form-group col-12">
 					      	<label class="txtLabelForm" for="inputTel">Telefone</label>
-					      	<input type="tel" class="form-control inputDefault" id="inputTel" name="telefone" placeholder="(11)445-4534">
+					      	<input type="tel" class="form-control inputDefault telMask" id="inputTel" name="telefone" placeholder="(11)445-4534">
 					      	<div class="invalid-feedback">
 					        	Campo obrigatório
 					      	</div>
@@ -238,7 +238,7 @@
 				    	<textarea class="form-control inputDefault" id="exampleFormControlTextarea1" name="mensagem" rows="3"></textarea>
 				  	</div>
 				  	<div class="form-group text-center">
-				  		<button type="submit" class="btnSendForm">Enviar</button>
+				  		<button type="submit" class="btnSendForm buttonPadrao">Enviar</button>
 				  	</div>
 				</form>
 			</div>
@@ -355,6 +355,8 @@
 <!-- Bootstrap -->
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js" integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<!-- Jquery Mask -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js" integrity="sha256-Kg2zTcFO9LXOc7IwcBx1YeUBJmekycsnTsq2RuFHSZU=" crossorigin="anonymous"></script>
 <!-- Main Script -->
 <script type="text/javascript" src="assets/js/main.js"></script>
 
